# scipy-community-analysis

./: .gitignore  pyproject.toml
notebooks/: main.ipynb
src/: main.py  notebook_utils.py  semantic.py  utils.py
src/data/: multiTimeline.csv  scipy_downloads_pypi.txt  scipy_scipy_2008_tag_counts.csv  scipy_scipy_2011_tag_counts.csv  scipy_scipy_2012_tag_counts.csv  scipy_scipy_2014_tag_counts.csv  scipy_scipy_2024_tag_counts.csv
